Add unit tests for UndoService and UserInteractions models
- Implement UndoServiceTest to validate time-windowed undo functionality for swipe actions, including scenarios for recording swipes, checking undo capability, and handling expiry.
- Create UserInteractionsTest to cover Like, Block, and Report domain models, ensuring proper behavior when interacting with these models, including validation of constraints and unique IDs.
- Introduce TestStorages utility class for in-memory storage implementations to facilitate testing of UserInteractions and Match functionalities.